--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,7 +34,7 @@
             "justMyCode": true
         },
         {
-            "name": "PROJ1-Q1",
+            "name": "PROJ1-Q1-DFS",
             "type": "python",
             "request": "launch",
             "program": "/Users/wangshuo/wksp/UCSC-CMPS140/pacman/pacai/bin/pacman.py",
@@ -44,6 +44,50 @@
                 "--layout",     "tinyMaze",
                 "--pacman",     "SearchAgent",
                 "--agent-args", "fn=pacai.student.search.depthFirstSearch"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
+        {
+            "name": "PROJ1-Q4-AStar",
+            "type": "python",
+            "request": "launch",
+            "program": "/Users/wangshuo/wksp/UCSC-CMPS140/pacman/pacai/bin/pacman.py",
+            "cwd": "/Users/wangshuo/wksp/UCSC-CMPS140/pacman/",
+            "env": { "PYTHONPATH": "/Users/wangshuo/wksp/UCSC-CMPS140/pacman/"},
+            "args": [
+                "--layout",     "bigMaze",
+                "--pacman",     "SearchAgent",
+                "--agent-args", "fn=pacai.student.search.aStarSearch,heuristic=pacai.core.search.heuristic.manhattan"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
+        {
+            "name": "PROJ1-Q5-Corner",
+            "type": "python",
+            "request": "launch",
+            "program": "/Users/wangshuo/wksp/UCSC-CMPS140/pacman/pacai/bin/pacman.py",
+            "cwd": "/Users/wangshuo/wksp/UCSC-CMPS140/pacman/",
+            "env": { "PYTHONPATH": "/Users/wangshuo/wksp/UCSC-CMPS140/pacman/"},
+            "args": [
+                "--layout",     "tinyCorners",
+                "--pacman",     "SearchAgent",
+                "--agent-args", "fn=pacai.student.search.breadthFirstSearch,prob=pacai.student.searchAgents.CornersProblem"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
+        {
+            "name": "PROJ1-Q7-Food",
+            "type": "python",
+            "request": "launch",
+            "program": "/Users/wangshuo/wksp/UCSC-CMPS140/pacman/pacai/bin/pacman.py",
+            "cwd": "/Users/wangshuo/wksp/UCSC-CMPS140/pacman/",
+            "env": { "PYTHONPATH": "/Users/wangshuo/wksp/UCSC-CMPS140/pacman/"},
+            "args": [
+                "--layout",     "trickySearch",
+                "--pacman",     "AStarFoodSearchAgent",
             ],
             "console": "integratedTerminal",
             "justMyCode": true
