--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -79,6 +79,20 @@
             "justMyCode": true
         },
         {
+            "name": "PROJ1-Q6-Heuristic",
+            "type": "python",
+            "request": "launch",
+            "program": "/Users/wangshuo/wksp/UCSC-CMPS140/pacman/pacai/bin/pacman.py",
+            "cwd": "/Users/wangshuo/wksp/UCSC-CMPS140/pacman/",
+            "env": { "PYTHONPATH": "/Users/wangshuo/wksp/UCSC-CMPS140/pacman/"},
+            "args": [
+                "--layout",     "mediumCorners",
+                "--pacman",     "AStarCornersAgent",
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
+        {
             "name": "PROJ1-Q7-Food",
             "type": "python",
             "request": "launch",
